day 15 - Added CoursesItemInfo2

--- a/src/index.custom.css
+++ b/src/index.custom.css
@@ -193,6 +193,10 @@
     max-width: 200px;
 }
 
+.course-info2__group-hidden {
+	margin-top: 30px;
+}
+
 .btn--disabled {
     background-color: #ddd;
     color: rgba(0, 0, 0, 0.3);
