day 19 - bug fix

--- a/src/index.custom.css
+++ b/src/index.custom.css
@@ -220,3 +220,11 @@
 .course-variants__pag {
    display: none;
 }
+
+.sidebar__item-hidden {
+   padding-left: 0;
+}
+.sidebar__sublink {
+   padding-left: 32px;
+   cursor: pointer;
+}
