--- a/src/index.custom.css
+++ b/src/index.custom.css
@@ -228,3 +228,12 @@
    padding-left: 32px;
    cursor: pointer;
 }
+.modal-wrapper .modal {
+   display: block;
+   position: relative;
+   height: auto;
+}
+.modal-wrapper .modal-dialog {
+   margin-left: auto;
+   margin-right: auto;
+}
