day 19 - added calendarik on account settings page

--- a/src/index.custom.css
+++ b/src/index.custom.css
@@ -1,3 +1,11 @@
+.datepicker {
+}
+
+.datepicker-cell.selected,
+.datepicker-cell.selected:hover {
+   background-color: #5e61da;
+}
+
 .img {
    display: block;
    position: relative;
