day 21 - check login form

--- a/src/index.custom.css
+++ b/src/index.custom.css
@@ -122,6 +122,9 @@
 .input-error::placeholder {
    color: #db422c !important;
 }
+.input-error-text {
+   text-align: left;
+}
 
 .header__logo svg {
    width: 100%;
