--- a/src/index.custom.css
+++ b/src/index.custom.css
@@ -6,6 +6,16 @@
    background-color: #5e61da;
 }
 
+.header__notification-item-icon svg path {
+   fill: #8c52d6;
+}
+.header__notification-item-icon--yellow svg path {
+   fill: #f7b23b;
+}
+.header__notification-item-icon--green svg path {
+   fill: #acd59a;
+}
+
 .img {
    display: block;
    position: relative;
