day 31 - add course - tab 3 - validation

--- a/src/index.custom.css
+++ b/src/index.custom.css
@@ -296,3 +296,10 @@
 .form-group--row .form-group:first-child {
    padding-right: 30px;
 }
+
+.create-price__checks {
+   flex-wrap: wrap;
+}
+.create-price__checks .input-error-text {
+   width: 100%;
+}
